# PhotoMigrator

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT-RELEASE.md  Config.ini  DOWNLOAD.md  Dockerfile  README.md  RELEASES-NOTES.md  ROADMAP.md  TODO.md  build-binary.py  build.py  nuitka-crash-report.xml  photomigrator.toml  project-notes.md  pull_add_commit_&_psuh.bat  pyproject.toml  releases-notes.md  requirements.txt  run.sh  script_info.txt  setup.py  t  update_discussions.py  update_releases.py
.github/: FUNDING.yml  update_version_dropdown.py
.run/: PhotoMigrator.run.xml
.run 2/: PhotoMigrator (help).run.xml
GitHub_Tools/: pull_add_commit_push.batt
agent-os/: config.yml
css-markdown-styles/: custom_markdown_style.css
doc/: RELEASES-NOTES.md  ROADMAP.md
docker/: CloudPhotoMigrator.bat  CloudPhotoMigrator.sh  Dockerfile  PhotoMigrator.bat  PhotoMigrator.sh  docker-compose-dev.yml  docker-compose.yml  docker-entrypoint.ps1  docker-entrypoint.sh  docker.conf  docker_entrypoint.sh  dockerfile  dockerfile-linux  dockerfile-windows  run-docker-dev.sh
docker-cli/: EXECUTION-INSTRUCTIONS.txt  PhotoMigrator.bat  docker-entrypoint.ps1  docker-entrypoint.sh  docker.conf  dockerfile-linux  dockerfile-windows
docker-web/: .env  EXECUTION-INSTRUCTIONS.txt  docker-compose-dev.yml  docker-compose.yml  run-docker-dev.sh
docs/: DOWLOAD.md  DOWNLOAD.md  RELEASES-NOTES.md  ROADMAP.md
exif_tool_macos/: META.json  META.yml
gpth_tool/: rename_gpth_files.bat  rename_gpth_files.py  rename_gpth_neo_files.bat  requirements.txt  (+2 more)
(+444 files in other folders)
