# pyproject.toml
[build-system]
# Build dependencies for creating wheels and source distributions
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photomigrator"      # Project name as published on PyPI
dynamic = ["version"]       # Version is provided dynamically by setup.py

description = "Photo Migration Tool"
readme = "README.md"        # Path to project README
requires-python = ">=3.7"   # Supported Python versions

[project.scripts]
# Defines the console script that calls the main() function
photomigrator = "photomigrator.PhotoMigrator:main"

[project.urls]
GitHub = "https://github.com/jaimetur/PhotoMigrator"
Documentation = "https://github.com/jaimetur/PhotoMigrator/tree/main/help"
Source = "https://github.com/jaimetur/PhotoMigrator/tree/main/src"
Changelog = "https://github.com/jaimetur/PhotoMigrator/blob/main/CHANGELOG.md"